src/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Unbounded&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    color: white;
    font-family: 'Oswald', sans-serif;
}

::selection {
    color: black;
    background: white;
}

html,
body {
    height: 100vh;
}

#content {
    background: url("./../img/bg.jpg");
    background-size: 100vw 140vh;
}

.upper-content {
    min-height: 100vh;
    display: grid;
    grid-template-rows: 12vh 1fr;
}

.tab-container {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    background-color: black;
    opacity: 0.6;
    position: sticky;
    top: 0;
}

.tab {
    flex: 1 1 0;
    text-align: center;
    cursor: pointer;
    font-size: 1.5rem;
    color: grey;
    font-family: 'Oswald', sans-serif;
    transition: all 0.3s;
}

.tab:hover,
.selected {
    transform: scale(1.2);
    color: white;
    opacity: 1;
}

.home-content {
    text-align: center;
    font-size: 2rem;
    grid-area: 2/1/2/2;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    gap: clamp(50px, 10vh, 150px);
}

.home-head {
    font-size: clamp(1.5rem, 10vw, 4rem);
    font-family: 'Unbounded', cursive;
}

.home-sub-head {
    font-family: 'Unbounded', cursive;
}

.menu-content {
    text-align: center;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    gap: 40px;
    padding: 50px min(15vw, 250px);
}

[class^='menu-item-'] {
    width: clamp(300px, 40%, 350px);
    display: flex;
    flex-flow: column-reverse nowrap;
    justify-content: center;
    align-items: center;
    gap: 30px;
    font-size: 1.2rem;
}

.menu-content img {
    border-radius: 15px;
    aspect-ratio: 1 / 1;
    width: 100%;
    object-fit: cover;
    transition: all 0.3s;
    cursor: pointer;
    border: 4px solid white;
}

.menu-content img:hover {
    transform: scale(1.06);
}

.contact-content {
    text-align: center;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    align-items: center;
    font-size: 1.7rem;
}

.contact-content img {
    width: min(60%, 550px);
    height: auto;
    border-radius: 20px;
    border: 4px solid white;
    cursor: pointer;
    transition: all 0.2s;
}

.contact-content img:hover {
    transform: scale(1.06);
}

.contact-container div {
    display: flex;
    flex-flow: column wrap;
}

.order {
    text-align: center;
    padding-block: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5vw;
    font-size: 1.2em;
    color: black;
    background-color: white;
}

.order::selection {
    color: white;
    background: black;
}

.order img {
    transition: all 0.3s;
    cursor: pointer;
}

.order img:hover {
    transform: scale(1.1);
}

footer {
    font-size: 1.2rem;
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    gap: 10px;
    padding: 10px;
}

.github-logo-container>img {
    height: 35px;
    width: auto;
    transition: all 0.3s ease-in-out;
    cursor: pointer;
}

.github-logo-container:hover>img {
    transform: rotate(360deg) scale(1.1);
    transition: all 0.3s ease-in-out;
}

.heart {
    transition: all 0.3s ease-in-out;
    cursor: pointer;
}

.heart:hover {
    color: rgb(252, 80, 80);
}

footer a {
    text-decoration: none;
    transition: all 0.4s ease-in-out;
}

footer a:visited {
    color: white;
}

footer div:nth-child(3) {
    font-size: 1rem;
}

